# cplusplus

./: .gitignore  RandomAnalysis.cpp  RockPaperScissors.cpp  test.cpp
KLAUSUR/: compute.cpp  datastructure.cpp  functor.cpp  inheritance.cpp  missing.cpp  numbers  numbers.cpp  simple_args.cpp  smoothie.cpp  stackunderflow.cpp  stl.cpp  words.cpp  yetanotherbug.cpp
altklausur-archiv/: animals.cpp  const.cpp  exceptions.cpp  memory.cpp  px.cpp  smart_pointer.cpp  test.cpp  typedef.cpp  typename.h
exam/: animal-polymorphism.cpp  meeting-with-cookies-using-smart-pointers  meeting-with-cookies-using-smart-pointers.cpp  meeting-with-cookies.cpp  spaceships.cpp  testing-spaceships.cpp
exam/testing/: a.h  c.cpp
exercises/: RockPaperScissors.cpp
exercises/0-own-expression_tree/: main.cpp
exercises/10-voxel_model/: data.hpp  main  main.cpp  quadtree.hpp  renderer.cpp  renderer.hpp  treeprocessor.cpp  treeprocessor.hpp  vector.hpp
exercises/11-logger/: consolepolicy.cpp  consolepolicy.hpp  filepolicy.cpp  filepolicy.hpp  logger.cpp  logger.hpp  main.cpp  policy.hpp
exercises/12-spaceship_tests/: main.cpp  objects.cpp  objects.hpp  space.cpp
exercises/3-permutations/: CMakeLists.txt  main.cpp
exercises/4-scope_timer/: CMakeLists.txt  main.cpp  scopetimer.cpp
exercises/6-expression_tree/: main.cpp  (+4 more)
exercises/ScopeTimer/: CMakeLists.txt  main.cpp  scopetimer.cpp  scopetimer.hpp
learning/: RandomAnalysis.cpp  classes_inheritance_overloading.cpp  test.cpp  typedef_and_using.cpp  virtual.cpp
permutations/: main.cpp  utils.cpp
src/: ArrayList.java  Testing.java
(+27 files in other folders)
